# fastapi-components

./: .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
examples/: simple.py
fastapi_components/: lifecycle.py  logging.py  state.py  state_manager.py
fastapi_components/components/: __init__.py  base.py  http_session.py  kafka_producer.py  mongo.py  postgres.py  redis.py
