[tool.poetry]
name = "fastapi-components"
version = "0.3.0"
description = "This library makes it easy to add dependencies to your fastapi service"
authors = ["Dmitriy Troyan <kashil.dima@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5"
pydantic = { version = "^1.7", extras = ["dotenv"] }
aiopg = { version = "^1.1", optional = true }
aioredis = { version = "^1.3", optional = true }
aiokafka = { version = "^0.7", optional = true }
uvicorn = { version = "^0.13", extras = ["uvloop"], optional = true }
fastapi = { version = "^0.63", optional = true }
sqlalchemy = { version = "~1.3.24", optional = true }
motor = { version = "^2.3.1", optional = true }
aiohttp = { version = "^3.7.3", optional = true }

[tool.poetry.extras]
redis = ["aioredis"]
postgres = ["aiopg", "sqlalchemy"]
kafka = ["aiokafka"]
web = ["uvicorn", "fastapi"]
mongo = ["motor"]
aiohttp = ["aiohttp"]
all = ["aioredis", "aiopg", "sqlalchemy", "aiokafka", "uvicorn", "fastapi", "motor", "aiohttp"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7"
mypy = "^0.812"
pytest = "^6.2"
flake8 = "^3.8"
testcontainers = "^3.2"
pytest-asyncio = "^0.14"
ipdb = "^0.13.7"
aioresponses = "^0.7.2"
async-asgi-testclient = "^1.4.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length=120
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
